@@ -938,7 +938,7 @@ OpenDoc_ERROR_IN_FILE=Error in file
 OpenXML_FILTER_NAME=Microsoft Open XML Files
 OpenXML_FILTER_OPTIONS=Open XML Filter Options
 OpenXML_WORD=Word
-OpenXML_TRANSLATE_HIDDEN_TEXT=Hidden &Text
+OpenXML_TRANSLATE_HIDDEN_TEXT=Non-visible Instruction &Text
 OpenXML_TRANSLATE_COMMENTS=Co&mments
 OpenXML_TRANSLATE_FOOTNOTES=&Footnotes
 OpenXML_TRANSLATE_ENDNOTES=&Endnotes
