@@ -8,7 +8,7 @@
 #               2008 Andrzej Sawula, Alex Buloichik, Didier Briel, Martin Fleurke
 #               2009 Didier Briel, Alex Buloichik, Martin Fleurke
 #               2010 Didier Briel, Wildrich Fourie, Martin Fleurke, 
-#                    Antonio Vilei, Arno Peters
+#                    Antonio Vilei, Arno Peters, Alex Buloichik
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -41,7 +41,7 @@
 #  @author Wildrich Fourie
 #  @author Antonio Vilei
 #
-#  @version 2.1
+#  @version 2.2
 #
 
 # The version number is taken from Version.properties, key version
@@ -881,7 +881,7 @@ OpenDoc_ERROR_IN_FILE=Erreur dans le fichier
 OpenXML_FILTER_NAME=Fichiers Microsoft Open XML
 OpenXML_FILTER_OPTIONS=Options du filtre Open XML
 OpenXML_WORD=Word
-OpenXML_TRANSLATE_HIDDEN_TEXT=&Texte masqu\u00e9
+OpenXML_TRANSLATE_HIDDEN_TEXT=&Texte d'instructions non visible
 OpenXML_TRANSLATE_COMMENTS=Co&mmentaires
 OpenXML_TRANSLATE_FOOTNOTES=&Notes de bas de page
 OpenXML_TRANSLATE_ENDNOTES=Notes de &fin de document
